--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta charset="utf-8">
 
-  <title>VF88 - Tài Xỉu, Xóc Đĩa, Slot Quay Hũ, Bắn Cá.</title>
+  <title>Won68 - Tài Xỉu, Xóc Đĩa, Slot Quay Hũ, Bắn Cá uy tín số 1 Hàn Quốc.</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -51,8 +51,8 @@
   <!--<link rel="apple-touch-icon" href=".png" />-->
   <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
-  <link rel="stylesheet" type="text/css" href="style-mobile.a47b3.css" />
-  <link rel="icon" href="favicon.763dd.ico" />
+  <link rel="stylesheet" type="text/css" href="style-mobile.88301.css" />
+  <link rel="icon" href="favicon.ed39a.ico" />
   <script src="config_game.11d4d.js"></script>
   <!-- Meta Pixel Code -->
 <script>
@@ -81,9 +81,9 @@ src="https://www.facebook.com/tr?id=966431048583504&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <script src="src/settings.ef9b4.js" charset="utf-8"></script>
+  <script src="src/settings.1f14d.js" charset="utf-8"></script>
 
-  <script src="main.7d607.js" charset="utf-8"></script>
+  <script src="main.50580.js" charset="utf-8"></script>
   <input type="file" id="file-uploader" accept="image/*">
 
   <script type="text/javascript">
