--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ src="https://www.facebook.com/tr?id=966431048583504&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <script src="src/settings.21908.js" charset="utf-8"></script>
+  <script src="src/settings.23712.js" charset="utf-8"></script>
 
-  <script src="main.0ed27.js" charset="utf-8"></script>
+  <script src="main.b7164.js" charset="utf-8"></script>
   <input type="file" id="file-uploader" accept="image/*">
 
   <script type="text/javascript">
