--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ src="https://www.facebook.com/tr?id=966431048583504&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <script src="src/settings.c3170.js" charset="utf-8"></script>
+  <script src="src/settings.a032f.js" charset="utf-8"></script>
 
-  <script src="main.4985a.js" charset="utf-8"></script>
+  <script src="main.daa20.js" charset="utf-8"></script>
   <input type="file" id="file-uploader" accept="image/*">
 
   <script type="text/javascript">
@@ -111,7 +111,7 @@ src="https://www.facebook.com/tr?id=966431048583504&ev=PageView&noscript=1"
         document.body.appendChild(domScript);
       }
 
-      loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.b922b.js', function () {
+      loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.aa796.js', function () {
         if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
           loadScript(debug ? 'physics.js' : 'physics-min.ce5ee.js', window.boot);
         }
