--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ src="https://www.facebook.com/tr?id=966431048583504&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <script src="src/settings.9b9c7.js" charset="utf-8"></script>
+  <script src="src/settings.690ad.js" charset="utf-8"></script>
 
-  <script src="main.1f520.js" charset="utf-8"></script>
+  <script src="main.81b4a.js" charset="utf-8"></script>
   <input type="file" id="file-uploader" accept="image/*">
 
   <script type="text/javascript">
