--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ src="https://www.facebook.com/tr?id=966431048583504&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <script src="src/settings.03313.js" charset="utf-8"></script>
+  <script src="src/settings.b05c3.js" charset="utf-8"></script>
 
-  <script src="main.0d0c9.js" charset="utf-8"></script>
+  <script src="main.94fc9.js" charset="utf-8"></script>
   <input type="file" id="file-uploader" accept="image/*">
 
   <script type="text/javascript">
